Se corrige modo obscuro en seccion conocenos

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,6 +195,10 @@ img {
   border-radius: var(--border-radius-md);
 }
 
+[data-theme="dark"].team-info p {   
+  color: var(--color-medium-gray);
+}
+
 .join-faq{
     padding: var(--spacing-md);
     border-radius: var(--border-radius-md);
